# DENG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cloud  Dockerfile.local  README.md  df.csv  docker-compose.cloud.yaml  docker-compose.local.yaml  docker-compose.yaml  gpu_specs.csv  ingestion.py  ingestion_pipeline.py  pyproject.toml
data/: gpu_clusters.csv
docker/: Dockerfile.local
kestra/: cloud_flow.yaml  local_flow.yaml
local_config/: servers.json
orchestration/: kestra_flow.yaml
pipelines/: data_lake_ingestion.py  data_warehouse_transformation.py  local_pipeline.py
src/: fetch_data.py  fetch_from_gcs.py  ingestion_pipeline.py  pipeline_utils.py  transform_data.py  write_to_big_query.py  write_to_data_lake.py  write_to_postgresql.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
