[project]
name = "deng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[project.optional-dependencies]
local = [
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.49",
]
cloud = [
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "pandas-gbq>=0.35.0",
    "pyarrow>=17.0.0",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
